--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==2.0.4
 colorama==0.4.4
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==5.5
 cryptography==3.4.8
 distro==1.6.0
 Django==3.2.7
